[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/objects/levels/bits/1/boss/shockwave.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 16 )

[node name="ShockwaveObject" type="Node2D"]
script = ExtResource( 1 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Left"]
position = Vector2( 0, -16 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Right"]
position = Vector2( 0, -16 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
